Fixing alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
   }
 
 }
-.card_container{
+.container{
   width: 80%;
   margin: 0 auto;
 }
@@ -134,10 +134,7 @@
 }
 
 .Filter{
-  width: 80%;
   padding: 15px;
-  text-align: left;
-  margin: 0 auto;
   
   button{
     margin: 5px;
@@ -163,7 +160,5 @@
     display: block;
     margin: 10px auto;
   }
-  .Filter{
-    width: 100%;
-  }
+
 }
